force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Account__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Account__c</fullName>
    <description>Related Account is this Account&apos;s ______.</description>
    <inlineHelpText>Related record is this Family / Organization&apos;s ______.</inlineHelpText>
    <label>Family / Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>