force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Civil_Date_Of_Next_Hebrew_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Civil_Date_Of_Next_Hebrew_Anniversary__c</fullName>
    <inlineHelpText>Calculated from Wedding relationship record.</inlineHelpText>
    <label>Civil Date of Next Hebrew Anniversary</label>
    <type>Date</type>
</CustomField>