force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Contact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;Account__c&quot; field but pointed to the Contact object instead of Account</description>
    <label>Person (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>