force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Department__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Department__c</fullName>
    <label>Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>