force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Description__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Description__c</fullName>
    <description>Additional information about this Relationship</description>
    <inlineHelpText>Additional information about this Relationship</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>