force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Graduation_Year__c</fullName>
    <description>Only applies to School/Student relationship types</description>
    <label>Graduation Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>