force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Hebrew_Wedding_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Hebrew_Wedding_Date__c</fullName>
    <label>Wedding Date (Hebrew)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>