force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Include_In_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Include_In_Roll_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Family</description>
    <label>Include In Roll-Up</label>
    <type>Checkbox</type>
</CustomField>