force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary Family Member</description>
    <label>Primary Member</label>
    <type>Checkbox</type>
</CustomField>