force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__IsSecondary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__IsSecondary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Secondary Household Member</description>
    <label>Secondary Member</label>
    <type>Checkbox</type>
</CustomField>