force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Jewish_Wedding__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Jewish_Wedding__c</fullName>
    <label>Jewish Wedding?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>