force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Next_Civil_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Next_Civil_Anniversary__c</fullName>
    <formula>if(
Month (OneCRM__Wedding_Date__c) &lt;= Month(Datevalue( NOW() ) ),
if ( Month (OneCRM__Wedding_Date__c) &lt; Month(Datevalue( NOW() ) ),
DATE( YEAR( DATEVALUE( NOW() ) ) + 1 , MONTH( OneCRM__Wedding_Date__c ) , DAY( OneCRM__Wedding_Date__c ) ),
if ( Day (OneCRM__Wedding_Date__c) &lt; Day ( Datevalue ( NOW() ) ),
DATE( YEAR( DATEVALUE( NOW() ) ) + 1 , MONTH( OneCRM__Wedding_Date__c ) , DAY( OneCRM__Wedding_Date__c ) ),
DATE( YEAR( DATEVALUE( NOW() ) ) , MONTH( OneCRM__Wedding_Date__c ) , DAY( OneCRM__Wedding_Date__c ) ) ) ),
DATE( YEAR( DATEVALUE( NOW() ) ) , MONTH( OneCRM__Wedding_Date__c ) , DAY( OneCRM__Wedding_Date__c ) ) )</formula>
    <label>Next Civil Anniversary</label>
    <type>Date</type>
</CustomField>