force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Next_Hebrew_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Next_Hebrew_Anniversary__c</fullName>
    <label>Upcoming Wedding Anniversary (Hebrew)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>