force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Observes__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Observes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Does he/she observe the other person&apos;s occurrences.</description>
    <label>Observes</label>
    <type>Checkbox</type>
</CustomField>