force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__PrimaryForThisPerson__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__PrimaryForThisPerson__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if Family is this member&apos;s primary</description>
    <label>Primary Family</label>
    <type>Checkbox</type>
</CustomField>