force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The &quot;RelatedAccount__c&quot; field, just point to the Contact object instead of the Account object</description>
    <label>Related Person (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships (Related Person (Contact))</relationshipLabel>
    <relationshipName>Relationships_Related_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>