force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Family / Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships (HIDDEN)</relationshipLabel>
    <relationshipName>RelationshipAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>