force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Relationship_Explanation__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Relationship_Explanation__c</fullName>
    <formula>IF(OneCRM__Related_Contact__c != null,
    OneCRM__Related_Contact__r.FirstName + &quot; &quot; +
    OneCRM__Related_Contact__r.LastName,
  OneCRM__RelatedAccount__r.Name) + &quot; &quot; +
IF(ISPICKVAL(OneCRM__Status__c, &quot;Current&quot;),
  &quot;is&quot;,
  &quot;was&quot;) + &quot; &quot; +
IF(OneCRM__Contact__c != null,
    OneCRM__Contact__r.FirstName + &quot; &quot; +
    OneCRM__Contact__r.LastName,
  OneCRM__Account__r.Name) + &quot;&apos;s &quot; +
IF( $Setup.OneCRM__Relationship_Settings__c.OneCRM__Reciprocal_Method__c = &quot;Value Inversion&quot;
&amp;&amp; CONTAINS(TEXT(OneCRM__Type__c), $Label.onecrm__Relationship_Split),
RIGHT(TEXT(OneCRM__Type__c), LEN(TEXT(OneCRM__Type__c))-FIND($Label.onecrm__Relationship_Split,TEXT(OneCRM__Type__c))),
TEXT(OneCRM__Type__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Explanation</label>
    <type>Text</type>
</CustomField>