force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Role__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Role__c</fullName>
    <label>Role</label>
    <length>60</length>
    <type>Text</type>
</CustomField>