force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__School_Level__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__School_Level__c</fullName>
    <label>School Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Bachelor</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>PhD.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>