force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Status__c</fullName>
    <description>Status of the Relationship.</description>
    <inlineHelpText>Status of the Relationship.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
                <default>true</default>
                <label>Current</label>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Spouse Deceased</fullName>
            </value>
            <value>
                <fullName>Former (other)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>