force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Type__c</fullName>
    <description>Friend
        Family
        Coworker
        Father
        Mother
        Parent
        Son
        Daughter
        Child
        Aunt
        Uncle
        Husband
        Wife
        Partner
        Cousin
        Grandmother
        Grandfather
        Grandparent
        Grandson
        Granddaughter
        Grandchild
        Employer
        Employee
        School
        Student
        Foundation
        Member
        Niece
        Nephew
        Father-in-Law
        Mother-in-Law
        Parent-in-Law
        Son-in-Law
        Daughter-in-Law
        Child-in-Law
        Brother-in-Law
        Sister-in-Law
        Sibling-in-Law</description>
    <inlineHelpText>Field that describes how the Related Contact is connected to the Contact.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Coworker</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Grandson</fullName>
            </value>
            <value>
                <fullName>Granddaughter</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Dating</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>