force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__UniqueKey__c</fullName>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>