force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Wedding_After_Sunset__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Wedding_After_Sunset__c</fullName>
    <label>Wedding After Sunset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>