force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Wedding_Date__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Wedding_Date__c</fullName>
    <label>Wedding Date</label>
    <type>Date</type>
</CustomField>