force-app/main/default/objects/OneCRM__Relationship__c/fields/OneCRM__Wedding_Day_Exact__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Wedding_Day_Exact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Wedding_Day_Exact</label>
    <type>Checkbox</type>
</CustomField>