force-app/main/default/objects/OneCRM__Relationship__c/recordTypes/OneCRM__Familial.recordType-meta.xml
<RecordType>
    <fullName>OneCRM__Familial</fullName>
    <active>true</active>
    <description>Defines a relationship between person &amp; family/family &amp; person</description>
    <label>Familial</label>
</RecordType>