force-app/main/default/objects/OneCRM__Relationship__c/recordTypes/OneCRM__Relationship_Affiliation.recordType-meta.xml
<RecordType>
    <fullName>OneCRM__Relationship_Affiliation</fullName>
    <active>true</active>
    <description>A relationship between a person and an organization.</description>
    <label>Affiliation</label>
</RecordType>