force-app/main/default/objects/OneCRM__Relationship__c/recordTypes/OneCRM__Relationship_Marriage.recordType-meta.xml
<RecordType>
    <fullName>OneCRM__Relationship_Marriage</fullName>
    <active>true</active>
    <description>Marriages ONLY.</description>
    <label>Marriage</label>
</RecordType>