force-app/main/default/objects/OneCRM__Relationship__c/recordTypes/OneCRM__Relationship_Standard.recordType-meta.xml
<RecordType>
    <fullName>OneCRM__Relationship_Standard</fullName>
    <active>true</active>
    <description>Default relationships between two people. NOT marriages.</description>
    <label>Standard</label>
</RecordType>