force-app/main/default/objects/OneCRM__Relationship__c/recordTypes/OneCRM__Yahrtzeit.recordType-meta.xml
<RecordType>
    <fullName>OneCRM__Yahrtzeit</fullName>
    <active>true</active>
    <description>for Yahrtzeits only</description>
    <label>Yahrtzeit</label>
</RecordType>