force-app/main/default/objects/OneCRM__Relationship__c/validationRules/OneCRM__Graduation_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>OneCRM__Graduation_Year</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
LEN(OneCRM__Graduation_Year__c) &gt; 0,
OR(
NOT(ISNUMBER(OneCRM__Graduation_Year__c)),
LEN(OneCRM__Graduation_Year__c) != 4)
)</errorConditionFormula>
    <errorMessage>Graduation year must be a valid four-digit year</errorMessage>
</ValidationRule>