force-app/main/default/objects/OneCRM__Relationship__c/listViews/OneCRM__All.listView-meta.xml
<ListView>
    <fullName>OneCRM__All</fullName>
    <columns>NAME</columns>
    <columns>OneCRM__Account__c</columns>
    <columns>OneCRM__RelatedAccount__c</columns>
    <columns>OneCRM__Status__c</columns>
    <columns>OneCRM__Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>