force-app/main/default/objects/OneCRM__Relationship__c/listViews/OneCRM__Marriages.listView-meta.xml
<ListView>
    <fullName>OneCRM__Marriages</fullName>
    <columns>NAME</columns>
    <columns>OneCRM__Account__c</columns>
    <columns>OneCRM__RelatedAccount__c</columns>
    <columns>OneCRM__Status__c</columns>
    <columns>OneCRM__Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OneCRM__Relationship__c.OneCRM__Relationship_Marriage</value>
    </filters>
    <label>Marriages</label>
    <language>en_US</language>
</ListView>