force-app/main/default/objects/OneCRM__Relationship__c/listViews/OneCRM__No_Reciprocal.listView-meta.xml
<ListView>
    <fullName>OneCRM__No_Reciprocal</fullName>
    <columns>NAME</columns>
    <columns>OneCRM__Account__c</columns>
    <columns>OneCRM__RelatedAccount__c</columns>
    <columns>OneCRM__Status__c</columns>
    <columns>OneCRM__Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OneCRM__ReciprocalRelationship__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Reciprocal</label>
    <language>en_US</language>
</ListView>